opencv项目实战代码注释 20230910

--- a/24_特征匹配.ipynb
+++ b/24_特征匹配.ipynb
@@ -16,31 +16,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: matplotlib in d:\\11_anaconda\\envs\\py3.6.3\\lib\\site-packages (3.3.4)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in d:\\11_anaconda\\envs\\py3.6.3\\lib\\site-packages (from matplotlib) (8.4.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in d:\\11_anaconda\\envs\\py3.6.3\\lib\\site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in d:\\11_anaconda\\envs\\py3.6.3\\lib\\site-packages (from matplotlib) (0.11.0)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in d:\\11_anaconda\\envs\\py3.6.3\\lib\\site-packages (from matplotlib) (3.0.7)\n",
-      "Requirement already satisfied: numpy>=1.15 in d:\\11_anaconda\\envs\\py3.6.3\\lib\\site-packages (from matplotlib) (1.19.5)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in d:\\11_anaconda\\envs\\py3.6.3\\lib\\site-packages (from matplotlib) (1.3.1)\n",
-      "Requirement already satisfied: six>=1.5 in d:\\11_anaconda\\envs\\py3.6.3\\lib\\site-packages (from python-dateutil>=2.1->matplotlib) (1.16.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install matplotlib"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -108,13 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "matches = bf.match(des1, des2)\n",
     "matches = sorted(matches, key=lambda x: x.distance)\n",
-    "img3 = cv2.drawMatches(img1, kp1, img2, kp2, matches[:10], None, flags=2)  # 画前十个点          \n",
+    "img3 = cv2.drawMatches(img1, kp1, img2, kp2, matches[:15], None, flags=2)  # 画前十个点          \n",
     "cv_show('img3',img3)"
    ]
   },
@@ -134,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +118,7 @@
     "\n",
     "good = []\n",
     "for m,n in matches:\n",
-    "    if m.distance < 0.75 * n.distance:  # m.distance 与 n.distance 比值小于 0.75，这是自己设定的过滤条件   \n",
+    "    if m.distance < 0.5 * n.distance:  # m.distance 与 n.distance 比值小于 0.5，最好的点比次好的点要好一倍以上，这里效果最好   \n",
     "        good.append([m])\n",
     "        \n",
     "img3 = cv2.drawMatchesKnn(img1, kp1, img2, kp2, good, None, flags=2)\n",
@@ -233,153 +208,6 @@
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 6. 全景拼接"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import cv2\n",
-    "\n",
-    "class Stitcher:\n",
-    "\n",
-    "    #拼接函数\n",
-    "    def stitch(self, images, ratio=0.75, reprojThresh=4.0,showMatches=False):\n",
-    "        #获取输入图片\n",
-    "        (imageB, imageA) = images\n",
-    "        #检测 A、B 图片的 SIFT 关键特征点，并计算特征描述子\n",
-    "        (kpsA, featuresA) = self.detectAndDescribe(imageA)\n",
-    "        (kpsB, featuresB) = self.detectAndDescribe(imageB)\n",
-    "\n",
-    "        # 匹配两张图片的所有特征点，返回匹配结果\n",
-    "        M = self.matchKeypoints(kpsA, kpsB, featuresA, featuresB, ratio, reprojThresh)           \n",
-    "\n",
-    "        # 如果返回结果为空，没有匹配成功的特征点，退出算法\n",
-    "        if M is None:\n",
-    "            return None\n",
-    "\n",
-    "        # 否则，提取匹配结果\n",
-    "        # H是3x3视角变换矩阵      \n",
-    "        (matches, H, status) = M\n",
-    "        # 将图片A进行视角变换，result是变换后图片\n",
-    "        result = cv2.warpPerspective(imageA, H, (imageA.shape[1] + imageB.shape[1], imageA.shape[0]))\n",
-    "        self.cv_show('result', result)\n",
-    "        # 将图片B传入result图片最左端\n",
-    "        result[0:imageB.shape[0], 0:imageB.shape[1]] = imageB\n",
-    "        self.cv_show('result', result)\n",
-    "        # 检测是否需要显示图片匹配\n",
-    "        if showMatches:\n",
-    "            # 生成匹配图片\n",
-    "            vis = self.drawMatches(imageA, imageB, kpsA, kpsB, matches, status)\n",
-    "            # 返回结果\n",
-    "            return (result, vis)\n",
-    "\n",
-    "        # 返回匹配结果\n",
-    "        return result\n",
-    "    \n",
-    "    def cv_show(self,name,img):\n",
-    "        cv2.imshow(name, img)\n",
-    "        cv2.waitKey(0)\n",
-    "        cv2.destroyAllWindows()\n",
-    "\n",
-    "    def detectAndDescribe(self, image):\n",
-    "        # 将彩色图片转换成灰度图\n",
-    "        gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
-    "\n",
-    "        # 建立 SIFT 生成器\n",
-    "        descriptor = cv2.xfeatures2d.SIFT_create()\n",
-    "        # 检测 SIFT 特征点，并计算描述子\n",
-    "        (kps, features) = descriptor.detectAndCompute(image, None)\n",
-    "\n",
-    "        # 将结果转换成 NumPy 数组\n",
-    "        kps = np.float32([kp.pt for kp in kps])\n",
-    "\n",
-    "        # 返回特征点集，及对应的描述特征\n",
-    "        return (kps, features)\n",
-    "\n",
-    "    def matchKeypoints(self, kpsA, kpsB, featuresA, featuresB, ratio, reprojThresh):\n",
-    "        # 建立暴力匹配器\n",
-    "        matcher = cv2.BFMatcher()\n",
-    "  \n",
-    "        # 使用 KNN 检测来自 A、B 图的SIFT特征匹配对，K=2\n",
-    "        rawMatches = matcher.knnMatch(featuresA, featuresB, 2)\n",
-    "\n",
-    "        matches = []\n",
-    "        for m in rawMatches:\n",
-    "            # 当最近距离跟次近距离的比值小于 ratio 值时，保留此匹配对\n",
-    "            if len(m) == 2 and m[0].distance < m[1].distance * ratio:\n",
-    "            # 存储两个点在 featuresA, featuresB 中的索引值\n",
-    "                matches.append((m[0].trainIdx, m[0].queryIdx))\n",
-    "\n",
-    "        # 当筛选后的匹配对大于 4 时，计算视角变换矩阵\n",
-    "        if len(matches) > 4:\n",
-    "            # 获取匹配对的点坐标\n",
-    "            ptsA = np.float32([kpsA[i] for (_, i) in matches])\n",
-    "            ptsB = np.float32([kpsB[i] for (i, _) in matches])\n",
-    "\n",
-    "            # 计算视角变换矩阵\n",
-    "            (H, status) = cv2.findHomography(ptsA, ptsB, cv2.RANSAC, reprojThresh)\n",
-    "\n",
-    "            # 返回结果\n",
-    "            return (matches, H, status)\n",
-    "\n",
-    "        # 如果匹配对小于4时，返回None\n",
-    "        return None\n",
-    "\n",
-    "    def drawMatches(self, imageA, imageB, kpsA, kpsB, matches, status):\n",
-    "        # 初始化可视化图片，将A、B图左右连接到一起\n",
-    "        (hA, wA) = imageA.shape[:2]\n",
-    "        (hB, wB) = imageB.shape[:2]\n",
-    "        vis = np.zeros((max(hA, hB), wA + wB, 3), dtype=\"uint8\")\n",
-    "        vis[0:hA, 0:wA] = imageA\n",
-    "        vis[0:hB, wA:] = imageB\n",
-    "\n",
-    "        # 联合遍历，画出匹配对\n",
-    "        for ((trainIdx, queryIdx), s) in zip(matches, status):\n",
-    "            # 当点对匹配成功时，画到可视化图上\n",
-    "            if s == 1:\n",
-    "                # 画出匹配对\n",
-    "                ptA = (int(kpsA[queryIdx][0]), int(kpsA[queryIdx][1]))\n",
-    "                ptB = (int(kpsB[trainIdx][0]) + wA, int(kpsB[trainIdx][1]))\n",
-    "                cv2.line(vis, ptA, ptB, (0, 255, 0), 1)\n",
-    "\n",
-    "        # 返回可视化结果\n",
-    "        return vis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "\n",
-    "# 读取拼接图片\n",
-    "imageA = cv2.imread(\"01_Picture/21_Left_01.png\")\n",
-    "imageB = cv2.imread(\"01_Picture/22_Right_01.png\")\n",
-    "\n",
-    "# 把图片拼接成全景图\n",
-    "stitcher = Stitcher()  # 实例化 Stitcher 对象\n",
-    "(result, vis) = stitcher.stitch([imageA, imageB], showMatches=True)\n",
-    "\n",
-    "# 显示所有图片\n",
-    "cv2.imshow(\"Image A\", imageA)\n",
-    "cv2.imshow(\"Image B\", imageB)\n",
-    "cv2.imshow(\"Keypoint Matches\", vis)\n",
-    "cv2.imshow(\"Result\", result)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
    ]
   }
  ],
