--- a/课件资料/25_背景建模.ipynb
+++ b/课件资料/25_背景建模.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
     "    # 形态学开运算去噪点\n",
     "    fgmask = cv2.morphologyEx(fgmask,cv2.MORPH_OPEN,kernel)\n",
     "    # 寻找视频中的轮廓\n",
-    "    im, contours, hierarchy = cv2.findContours(fgmask, cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_SIMPLE)    \n",
+    "    contours, hierarchy = cv2.findContours(fgmask, cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_SIMPLE)    \n",
     "    \n",
     "    for c in contours:\n",
     "        # 计算各轮廓的周长\n",
@@ -183,6 +183,13 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
