--- a/课件资料/26_光流估计.ipynb
+++ b/课件资料/26_光流估计.ipynb
@@ -65,6 +65,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 基本假设：像素点在t时刻位置处于(x,y),在t+dt时刻位置处于(x+dx,y+dy),因为是同一个像素点，所以亮度不变。  \n",
+    "### 要解的也就是dx和dy，根据他们算出速度的大小和方向。\n",
+    "###  \n",
+    "  \n",
     "![image.png](attachment:image.png)"
    ]
   },
@@ -111,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,49 +124,84 @@
     "\n",
     "cap = cv2.VideoCapture('02_Video/01_Foreground.avi')\n",
     "\n",
-    "# 角点检测所需参数\n",
-    "# 如果不限制角点最大数量，速度就会有些慢，达不到实时的效果\n",
-    "# 品质因子会筛选角点，品质因子设置的越大，得到的角点越少                \n",
-    "feature_params = dict( maxCorners = 100,\n",
-    "                       qualityLevel = 0.3,\n",
-    "                       minDistance = 7 )\n",
+    "# 角点检测所需参数。\n",
+    "# maxCorners: 要检测的最大角点数量。如果不限制角点最大数量，速度就会有些慢，达不到实时的效果。\n",
+    "# qualityLevel: 角点的质量水平，范围为 0 到 1，通常设置为较小的值。品质因子设置的越大，得到的角点越少。\n",
+    "# minDistance: 检测到的角点之间的最小距离。\n",
+    "# blockSize: 角点检测中的块大小，这里没填。\n",
+    "feature_params = dict( maxCorners = 100, qualityLevel = 0.3, minDistance = 7 )\n",
     "\n",
     "# lucas-kanada参数\n",
-    "# winSize：窗口大小 maxLevel：金字塔层数\n",
-    "lk_params = dict( winSize = (15,15), \n",
-    "                  maxLevel = 2 )\n",
+    "# lk_params: 一个包含光流估计参数的字典。常见的参数包括：\n",
+    "#     winSize: 搜索窗口的大小，光流算法会在该窗口内搜索特征点的位置。\n",
+    "#     maxLevel: 图像金字塔的最大级别。\n",
+    "#     criteria: 停止条件，通常设置为迭代次数或精度。\n",
+    "lk_params = dict( winSize = (15,15), maxLevel = 2 )\n",
     "\n",
     "# 随即颜色条\n",
     "color = np.random.randint(0,255,(100,3))\n",
     "\n",
     "# 拿到第一帧图像\n",
     "ret, old_frame = cap.read()\n",
-    "old_gray = cv2.cvtColor(old_frame, cv2.COLOR_BGR2GRAY)                         \n",
+    "old_gray = cv2.cvtColor(old_frame, cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "# cv2.goodFeaturesToTrack函数返回所有检测特征点，需要输入：图像，角点最大数量(效率)，品质因子(特征值越大的越好来筛选)                                  \n",
-    "# 距离相当于这区间有比这个角点强的，就不要这个弱的了\n",
-    "# **变量 作为传入参数，是用来传入不定长的变量\n",
-    "p0 = cv2.goodFeaturesToTrack(old_gray, mask = None, **feature_params)  # 拿到第一帧的角点，后面视频中是对第一帧的角点进行追踪     \n",
+    "# OpenCV 中用于检测图像中的角点的函数。\n",
+    "#     old_gray: 输入的灰度图像，是检测角点的源图像。\n",
+    "#     mask（可选参数）：指定感兴趣区域（ROI），只在指定的区域内检测角点。如果不需要指定 ROI，可以将其设置为 None。\n",
+    "#     maxCorners: 要检测的最大角点数量。如果不限制角点最大数量，速度就会有些慢，达不到实时的效果。\n",
+    "#     qualityLevel: 角点的质量水平，范围为 0 到 1，通常设置为较小的值。品质因子设置的越大，得到的角点越少。\n",
+    "#     minDistance: 检测到的角点之间的最小距离。\n",
+    "#     blockSize: 角点检测中的块大小，这里没填。\n",
+    "# 函数的返回值是一个包含检测到的角点坐标的 NumPy 数组。\n",
+    "# **feature_params：字典解包，用来传入不定长的字典变量。\n",
+    "# 拿到第一帧的角点，后面视频中是对第一帧的角点进行追踪，所以第一帧没出现的人后面跟踪不到。\n",
+    "p0 = cv2.goodFeaturesToTrack(old_gray, mask = None, **feature_params)\n",
+    "test = p0.copy()\n",
     "\n",
     "# 创建一个 mask\n",
     "mask = np.zeros_like(old_frame)\n",
     "\n",
     "while(True):\n",
+    "    # 从第二帧开始\n",
     "    ret, frame = cap.read()\n",
-    "    frame_gray = cv2.cvtColor(frame,cv2.COLOR_BGR2GRAY)                       \n",
+    "    # 转换成灰度图\n",
+    "    frame_gray = cv2.cvtColor(frame,cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    # OpenCV 中用于光流估计的函数，通常用于跟踪图像中的特征点。下面是函数的参数解释：\n",
+    "    #     old_gray: 前一帧的灰度图像，是光流估计的源图像。\n",
+    "    #     frame_gray: 当前帧的灰度图像，是光流估计的目标图像。\n",
+    "    #     p0: 之前帧中的特征点坐标，是使用 cv2.goodFeaturesToTrack() 检测到的角点。\n",
+    "    #     None：这是一个掩码图像，用于指定在哪些点进行光流估计。通常设置为 None，表示在所有特征点上进行估计。\n",
+    "    #     lk_params: 一个包含光流估计参数的字典。常见的参数包括：\n",
+    "    #         winSize: 搜索窗口的大小，光流算法会在该窗口内搜索特征点的位置。\n",
+    "    #         maxLevel: 图像金字塔的最大级别。\n",
+    "    #         criteria: 停止条件，通常设置为迭代次数或精度。\n",
+    "    # 函数的返回值包括：\n",
+    "    #     p1: 在当前帧中估计得到的特征点坐标。\n",
+    "    #     st: 一个状态数组，用于指示哪些特征点被成功跟踪，哪些失败，找到的状态为1，未找到的状态为0。\n",
+    "    #     err: 一个误差数组，包含每个特征点的跟踪误差。\n",
+    "    #  p1 和 p0 大小相同\n",
+    "    p1, st, err = cv2.calcOpticalFlowPyrLK(old_gray, frame_gray, p0, None, **lk_params)\n",
     "    \n",
-    "    # 需要传入前一帧和当前图像以及前一帧检测到的角点\n",
-    "    p1, st, err = cv2.calcOpticalFlowPyrLK(old_gray, frame_gray, p0, None, **lk_params)                         \n",
+    "    # st == 1 表示找到的特征点，没找到的特征点就不要了，这会导致障碍物遮挡后特征点丢失。\n",
+    "    # st == 1：这是一个条件表达式，它会生成一个布尔数组，其中的每个元素都与 st 中的相应元素相关。\n",
+    "    #          如果 st 中的元素为 1，则相应的布尔数组元素为 True，否则为 False。\n",
+    "    # 这是一个数组索引操作，它会返回一个新的 NumPy 数组，其中只包含满足条件 st == 1 的那些特征点的坐标。\n",
+    "    # 这个语法只有 NumPy 数组可以用，list列表不能用的\n",
+    "    # 这一步会从一个 n*1*2 的数组，变成 n*2 的数组\n",
+    "    good_new = p1[st == 1]\n",
+    "    good_old = p0[st == 1]\n",
     "    \n",
-    "    # st=1 表示\n",
-    "    good_new = p1[st==1]  # st==1 表示找到的特征点，没找到的特征点就不要了\n",
-    "    good_old = p0[st==1]\n",
-    "    \n",
+    "    # 因为判断条件一样，都是st == 1，所以这一步之后 p1 和 p0 大小依旧相同且不会错位，所以可以直接用zip函数拼接\n",
+    "    # 下面使用 ravel() 将其展平为一维数组，由于 new,old 都是一维数组，所以这里不展平也对\n",
     "    for i, (new,old) in enumerate(zip(good_new,good_old)):\n",
-    "        a,b = new.ravel()\n",
-    "        c,d = old.ravel()\n",
-    "        mask = cv2.line(mask,(a,b),(c,d),color[i].tolist(),2)                         \n",
-    "        frame = cv2.circle(frame,(a,b),5,color[i].tolist(),-1)    \n",
+    "        # 坐标点位置需要转换成整型，否则cv2.line和cv2.circle会报错\n",
+    "        a,b = new.ravel().astype(int)\n",
+    "        c,d = old.ravel().astype(int)\n",
+    "        cv2.line(mask, (a,b),(c,d), color[i].tolist(), 2)\n",
+    "        # -1：这是表示绘制实心圆的参数。如果值为负数，表示绘制一个实心圆；如果值为正数，则表示绘制一个带有指定线条宽度的圆边框。\n",
+    "        cv2.circle(frame,(a,b),5,color[i].tolist(),-1)\n",
+    "    # mask上画线，frame上画圆，然后将他们叠加\n",
     "    img = cv2.add(frame,mask)\n",
     "    \n",
     "    cv2.imshow('frame',img)\n",
@@ -170,13 +209,51 @@
     "    if k == 27:\n",
     "        break\n",
     "        \n",
-    "    # 更新\n",
+    "    # 这轮循环的新图变下轮循环的旧图\n",
     "    old_gray = frame_gray.copy()\n",
+    "    # 将 good_new 从一维数组重新整形为一个三维数组，其中第一维的大小是 -1，表示自动计算，\n",
+    "    # 第二维的大小是 1，表示每个坐标点包含一个 [x, y] 对，第三维的大小是 2，表示每个坐标点有两个分量（x 和 y 坐标）。\n",
+    "    # 这一步会从一个 n*2 的数组，再变成 n*1*2 的数组\n",
+    "    # 这轮循环通过筛选p1得到的good_new特征点坐标，变成下轮的循环未筛选的p0坐标\n",
     "    p0 = good_new.reshape(-1,1,2)\n",
     "    \n",
     "cv2.destroyAllWindows()\n",
     "cap.release()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3]\n",
+      "[2 1 2 1]\n",
+      "(38, 1, 2)\n",
+      "(38, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python教学：关于good_new = p1[st == 1]、good_old = p0[st == 1]的语法实例\n",
+    "a = np.array([1,2,3,4])   \n",
+    "print(a[np.array([1,0,1,0])==1])\n",
+    "print(a[np.array([1,0,1,0])])\n",
+    "\n",
+    "st = np.ones((38, 1))\n",
+    "print(test.shape)   # (38, 1, 2)\n",
+    "print(test[st == 1].shape)   # (38, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
