--- a/课件资料/23_sift关键点提取.ipynb
+++ b/课件资料/23_sift关键点提取.ipynb
@@ -335,7 +335,8 @@
     "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "print(cv2.__version__)\n",
     "\n",
-    "sift = cv2.xfeatures2d.SIFT_create()  # 将 SIFT 算法实例化出来\n",
+    "# sift = cv2.xfeatures2d.SIFT_create()可以改成如下代码，这是因为新版本的SIFT可以直接引用，不再需要安装contrib包\n",
+    "sift = cv2.SIFT_create()  # 将 SIFT 算法实例化出来\n",
     "kp = sift.detect(gray, None) # 把灰度图传进去，得到特征点、关键点\n",
     "\n",
     "img = cv2.drawKeypoints(gray, kp, img)\n",
